--- a/ansible/JenkinsPassword.yaml
+++ b/ansible/JenkinsPassword.yaml
@@ -3,7 +3,7 @@
   hosts: Jenkins-Server
   tasks:
     - name: Cat the file
-      command: cat /path/to/your/file
+      command: cat /var/lib/jenkins/secrets/initialAdminPassword
       register: file_content
 
     - name: Display the Password
