--- a/ansible/JenkinsPassword.yaml
+++ b/ansible/JenkinsPassword.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Cat Jenkins Password from a Jenkins Server
   hosts: Jenkins-Server
+  become: true
   tasks:
     - name: Cat the file
       command: cat /var/lib/jenkins/secrets/initialAdminPassword
