--- a/ansible/Jenkins-Server-Playbook.yaml
+++ b/ansible/Jenkins-Server-Playbook.yaml
@@ -1,4 +1,8 @@
 ---
+#This playbook copies 3 scripts
+# node18.6.0.sh to install node version 18.6.0 and yarn
+# jenkins.sh to install Jenkins and its dependencies
+# docker.sh to install docker and add the jenkins user to the docker group in order to be able to run docker commands from the jenkins pipeline
 - name: Configure Jenkins Server
   hosts: Jenkins-Server
   tasks:
