--- a/ansible/JenkinsPassword.yaml
+++ b/ansible/JenkinsPassword.yaml
@@ -1,4 +1,5 @@
 ---
+# this playbook will allow you to get the initial jenkins password to login for the first time
 - name: Cat Jenkins Password from a Jenkins Server
   hosts: Jenkins-Server
   become: true
