--- a/ansible/helm-prometheus-playbook.yaml
+++ b/ansible/helm-prometheus-playbook.yaml
@@ -1,4 +1,8 @@
 ---
+# this playbook will copy 3 scripts to the kops instance then run them
+# helm.sh to download and install helm binaries
+# prometheus.sh to install prometheus usnig helm charts
+# javaForKopsAsSlave.sh to make the required directories and install dependencies that kops need to run as a slave for jenkins
 - name: Install Helm and prometheus on Kops Machine
   hosts: KOPS
   tasks:
